Organized resources alittle better

--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,13 @@
     "short_name": "PWA Demo",
     "icons": [
         {
-        "src": "./icon.png",
+        "src": "./icons/icon.png",
         "sizes": "144x144",
         "type": "image/png",
         "purpose": "maskable"
         },
         {
-            "src": "./icon-512.png",
+            "src": "./icons/icon-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any"
